fix(reset): don't squash the full page print

--- a/src/client/styles/reset.less
+++ b/src/client/styles/reset.less
@@ -1,5 +1,6 @@
 // Reset
 // -----------------------------------------------------------------------------
 
+html { width: 100%; height: 100%; }
 html, body, ul, li { margin: 0; padding: 0; }
 ul { list-style: none; }
